<resources>
    <string name="app_name">CryptShare</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="signUpText">SplashScreen Hello</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="register_now"><u>Register Now</u></string>
    <string name="new_user">New User? </string>
    <string name="sign_in">Sign In</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="log_in">Log in</string>
    <string name="get_otp"><u>Get OTP</u></string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="log_in_underline"><u>Log In</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_npassword_reset_email">Send \nPassword Reset Email</string>
    <string name="SignIN_IncorrectUser_or_Pwd">Incorrect Username or Password.</string>
    <string name="recent_transfers">Recent Transfers</string>
    <string name="received_files">Received Files</string>
    <string name="email_id">Email ID</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="share">Share</string>
</resources>